--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
       name="Best Used Cars"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="./logo512.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
 
     <link
       rel="stylesheet"
