--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,8 @@
     <link rel="manifest" href="./manifest.json" />
 
     <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-      crossorigin="anonymous"
     />
 
     <title>Best Used Cars</title>
