Mobile nav working

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <!-- Discourage iOS from overiding link styling for phone and email -->
+    <meta name="format-detection" content="telephone=no" />
 
     <title>Best Used Cars</title>
   </head>
